/*
 * Copyright The Stargate Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_package = "io.stargate.proto";
option go_package = "stargate/proto";

package stargate;

import "query.proto";

// The response to a Query or Batch message, with additional enriched state on each row.
message EnrichedResponse {
  oneof result {
    // The result data.
    EnrichedResultSet result_set = 1;
    // How the query changed the CQL schema.
    SchemaChange schema_change = 4;
  }
  // The server-side warnings for the query, if any.
  repeated string warnings = 2;
  // The tracing information, if it was requested for the query.
  Traces traces = 3;
}

// The data returned in response to a CQL query, with added data on each row.
message EnrichedResultSet {
  // Metadata about the columns that this result set contains.
  // This may be omitted if explicitly requested by the client (see QueryParameters.skip_metadata
  // and BatchParameters.skip_metadata).
  repeated ColumnSpec columns = 1;

  // The rows of CQL data.
  repeated EnrichedRow rows = 2;

  // If there are more pages, a paging state that will allow the client to build a new query for the
  // next page.
  google.protobuf.BytesValue paging_state = 3;
}

// A wrapper for a single row in a result set, with extra enriched data.
message EnrichedRow {
  Row row = 1;
  // The paging state for the row (only set on enriched responses).
  google.protobuf.BytesValue paging_state = 2;
  // The comparable bytes for the row (only set on enriched responses).
  google.protobuf.BytesValue comparable_bytes = 3;
}
